Fixed responsive menu bug. Content is now pushed down when menu opens on small screens.

--- a/sgdfrontend/static/scss/_layout.scss
+++ b/sgdfrontend/static/scss/_layout.scss
@@ -10,7 +10,7 @@ http://smacss.com/book/type-layout
 /* Main page header, with global navigation */
 #layout-page-header {
 	width: 100%;
-	height: 135px;
+	// height: 135px;
 }
 
 #layout-page-header-content {
@@ -20,7 +20,7 @@ http://smacss.com/book/type-layout
 
 #layout-page-header-nav {
 	width: 100%;
-	height: 45px;
+	//height: 45px;
 }
 
 /* PAGE FOOTER - sticky! */
